--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.17.1",
     "motion": "^12.23.12",
     "next": "15.4.6",
